0.5.1:
  - Major performance improvements.
  - Support for proxies.

0.5.0:
  - Now support Savon 0.9.6.
  - No longer depend on Soap4r.
  - Support for OAuth authentication method.

0.4.0:
  - Extracted soap4r specific code from main path.
  - APIs with Savon backend are now ruby1.9 - compatible.
  - Fixed possible statement corruption after call.

0.3.0:
  - Fixes towards Ruby1.9 compatibility.
  - Support for method names with CAPSed words (Savon).
  - New single-Logger logging system.

0.2.1:
  - Support for Savon 0.9.1 and later which is now a dependency.
  - Upgraded to httpi/0.9.2, httpclient/2.1.6.
  - use_ruby_names now defaults to true.

0.2.0:
  - Now using httpi instead of net/http.

0.1.0:
  - Full soap4r code generation for client libraries.
  - Experimental savon code generation for client libraries (in development).
  - Full ClientLogin authentication support.
  - Minimal documentation generation support.
  - The very beginnings of a testing framework.